# PJBL---Minera-o-de-Dados

./: .env.example  .gitignore  README.md  docker-compose.dev.yml  docker-compose.prod.yml  pyproject.toml
collectors/: Dockerfile  requirements.txt
collectors/bgptools/: collector.py
collectors/ripe/: collector.py
dashboard/: Dockerfile  app.py  requirements.txt
db/: init.sql
db/migrations/: migration_001_add_city_state.sql  migration_002_add_attack_audit_tables.sql
pipeline/: cleaner.py  loader.py
scheduler/: Dockerfile  requirements.txt  scheduler.py
scripts/: find_mitigators.py
shared/: asn_repo.py  config.py  mitigator_discovery.py  models.py
tests/: test_asn_repo.py  test_attack_events.py  test_attack_events_extended.py  test_cleaner.py  test_cleaner_extended.py  test_config.py  test_dashboard_asn.py  test_loader_unit.py  test_mitigator_discovery.py  test_models.py  test_models_extended.py  test_worker_tasks.py
worker/: Dockerfile  requirements.txt  tasks.py  worker.py
